# data-types-a-la-carte

./: .gitignore  CHANGELOG.md  README.md  data-types-a-la-carte.cabal  package.yaml  stack.yaml
src/: DataTypeALaCarte.hs  Free.hs  test.txt
