cabal-version:      2.4
name:               data-types-a-la-carte
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/data-types-a-la-carte#readme>

homepage:           https://github.com/githubuser/data-types-a-la-carte#readme
bug-reports:        https://github.com/githubuser/data-types-a-la-carte/issues
author:             Author name here
maintainer:         example@example.com
copyright:          2025 Author name here
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/githubuser/data-types-a-la-carte

library
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010

  -- cabal-fmt: expand src
  exposed-modules:  DataTypeALaCarte
